MasterNodeJS/Udemy-NodeJS/Udemy-NodeJS - Stephen Grider/01.Project_Blog/Part 3 - Dockers And Kubernetes/a1.infra/k8s/02.posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec: 
      containers:
        - name: posts
          image: rockstar4400/posts:latest
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
