MasterNodeJS/Udemy-NodeJS/Udemy-NodeJS - Stephen Grider/01.Project_Blog/Part 3 - Dockers And Kubernetes/a1.infra/k8s/04.event-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event
  template:
    metadata:
      labels:
        app: event
    spec: 
      containers:
        - name: event
          image: rockstar4400/event:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-srv
spec:
  selector:
    app: event
  ports:
    - name: event
      protocol: TCP
      port: 6000
      targetPort: 6000
