MasterNodeJS/Udemy-NodeJS/Udemy-NodeJS - Stephen Grider/01.Project_Blog/Part 3 - Dockers And Kubernetes/a1.infra/k8s/05.query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec: 
      containers:
        - name: query
          image: rockstar4400/query:latest
---
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  ports:
    - name: query
      protocol: TCP
      port: 7000
      targetPort: 7000
