MasterNodeJS/Udemy-NodeJS/Udemy-NodeJS - Stephen Grider/01.Project_Blog/Part 3 - Dockers And Kubernetes/a1.infra/k8s/06.moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec: 
      containers:
        - name: moderation
          image: rockstar4400/moderation:latest
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 8000
      targetPort: 8000
